--- a/bower.json
+++ b/bower.json
@@ -21,11 +21,7 @@
     "test",
     "tests"
   ],
-  "dependencies": {
-    "jquery": "~2.1.3"
-  },
-  "devDependencies": {
-    "requirejs": "~2.1.16"
-  },
+  "dependencies": {},
+  "devDependencies": {},
   "homepage": "https://github.com/aetos382/jQuery.SyntaxHighlighter"
 }
