--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
   },
   "devDependencies": {
     "gulp": "^3.8.11",
+    "gulp-browserify": "^0.5.1",
+    "gulp-rename": "^1.2.0",
     "gulp-sourcemaps": "^1.5.1",
     "gulp-typescript": "^2.5.0",
     "gulp-uglify": "^1.1.0",
-    "gulp-umd": "^0.1.3",
+    "gulp-wrap-js": "^0.2.1",
+    "merge2": "^0.3.2",
     "requirejs": "^2.1.16"
   },
   "repository": {
