--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
     "aetos"
   ],
   "license": "MS-PL",
-  "main": "jQuery.SyntaxHighlighter.js",
+  "main": "dist/jQuery.SyntaxHighlighter.js",
   "keywords": [
     "jquery-plugin"
   ],
